// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders cru org contact correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ],
        ]
      }
    >
      John Doe
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 12,
              "lineHeight": 14,
              "paddingTop": 6,
            },
          ]
        }
      >
        Stage 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
              ],
            ]
          }
        >
           · 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
              ],
            ]
          }
        >
          Contacted
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#52C5DC",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#52C5DC",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders cru org contact without stage correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ],
        ]
      }
    >
      John Doe
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="stageText"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
                Object {
                  "color": "#52C5DC",
                },
              ],
            ]
          }
        >
          Add Stage
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
              ],
            ]
          }
        >
           · 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
              ],
            ]
          }
        >
          Contacted
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#52C5DC",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#52C5DC",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders cru org member correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ],
        ]
      }
    >
      John Doe
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 12,
              "lineHeight": 14,
              "paddingTop": 6,
            },
          ]
        }
      >
        Stage 1
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#52C5DC",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#52C5DC",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders me correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ],
        ]
      }
    >
      Me
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 12,
              "lineHeight": 14,
              "paddingTop": 6,
            },
          ]
        }
      >
        Stage 1
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#52C5DC",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#52C5DC",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders personal ministry contact correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ],
        ]
      }
    >
      John Doe
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 12,
              "lineHeight": 14,
              "paddingTop": 6,
            },
          ]
        }
      >
        Stage 1
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#52C5DC",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#52C5DC",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders uncontacted cru org contact correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ],
        ]
      }
    >
      John Doe
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 12,
              "lineHeight": 14,
              "paddingTop": 6,
            },
          ]
        }
      >
        Stage 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
              ],
            ]
          }
        >
           · 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                  "lineHeight": 14,
                  "paddingTop": 6,
                },
              ],
            ]
          }
        >
          Uncontacted
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#52C5DC",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#52C5DC",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
